# PrintRol

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.MD
printrol/: CMakeLists.txt
printrol/executables/: CMakeLists.txt
printrol/executables/printrol/: CMakeLists.txt  CommThread.h  main.cpp  printrol_window.cpp  printrol_window.h  printrol_window.ui
printrol/libs/: CMakeLists.txt  README.MD
printrol/libs/ComList/: CMakeLists.txt
printrol/libs/ComList/src/: ComList.cpp
printrol/libs/ISerial/: CMakeLists.txt
printrol/libs/ISerial/include/ISerial/: ISerial.h
printrol/libs/LineFilter/: CMakeLists.txt
printrol/libs/LineFilter/include/LineFilter/: LineFilter.h
printrol/libs/LineFilter/src/: LineFilter.cpp
printrol/libs/LineFilter/test/: LineFilterTest.cpp
printrol/libs/LinuxSerial/: CMakeLists.txt
printrol/libs/LinuxSerial/include/LinuxSerial/: LinuxSerial.h
printrol/libs/LinuxSerial/src/: LinuxSerial.cpp
printrol/libs/PrinterMonitor/: CMakeLists.txt
printrol/libs/PrinterMonitor/include/PrinterMonitor/: PrinterMonitor.h
printrol/libs/PrinterMonitor/src/: PrinterMonitor.cpp
printrol/libs/PrinterMonitor/test/: PrintMonTest.cpp
printrol/libs/WinSerial/: CMakeLists.txt
printrol/libs/WinSerial/include/WinSerial/: WinSerial.h
printrol/libs/WinSerial/src/: ComList.cpp  WinSerial.cpp
